# sargassum-segmentation

./: README.md
sargassum-segmentation/: Makefile  README.md  pyproject.toml  requirements.txt
sargassum-segmentation/notebooks/: segmentation.ipynb
sargassum-segmentation/src/: make_dataset.py  utils.py
